src/objects/TimeManagement__c.object
<CustomObject>
    <description>Attendance for employee</description>
    <fields>
        <fullName>EnteringTime2Cal__c</fullName>
        <formula>IF (ISNULL(EnteringTime2__c), &quot;&quot;, LEFT(RIGHT(text(EnteringTime2__c + 3.375),9),5))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>$入室２</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EnteringTime2HM__c</fullName>
        <label>入室２時刻</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>00:00</fullName>
                </value>
                <value>
                    <fullName>00:10</fullName>
                </value>
                <value>
                    <fullName>00:20</fullName>
                </value>
                <value>
                    <fullName>00:30</fullName>
                </value>
                <value>
                    <fullName>00:40</fullName>
                </value>
                <value>
                    <fullName>00:50</fullName>
                </value>
                <value>
                    <fullName>01:00</fullName>
                </value>
                <value>
                    <fullName>01:10</fullName>
                </value>
                <value>
                    <fullName>01:20</fullName>
                </value>
                <value>
                    <fullName>01:30</fullName>
                </value>
                <value>
                    <fullName>01:40</fullName>
                </value>
                <value>
                    <fullName>01:50</fullName>
                </value>
                <value>
                    <fullName>02:00</fullName>
                </value>
                <value>
                    <fullName>02:10</fullName>
                </value>
                <value>
                    <fullName>02:20</fullName>
                </value>
                <value>
                    <fullName>02:30</fullName>
                </value>
                <value>
                    <fullName>02:40</fullName>
                </value>
                <value>
                    <fullName>02:50</fullName>
                </value>
                <value>
                    <fullName>03:00</fullName>
                </value>
                <value>
                    <fullName>03:10</fullName>
                </value>
                <value>
                    <fullName>03:20</fullName>
                </value>
                <value>
                    <fullName>03:30</fullName>
                </value>
                <value>
                    <fullName>03:40</fullName>
                </value>
                <value>
                    <fullName>03:50</fullName>
                </value>
                <value>
                    <fullName>04:00</fullName>
                </value>
                <value>
                    <fullName>04:10</fullName>
                </value>
                <value>
                    <fullName>04:20</fullName>
                </value>
                <value>
                    <fullName>04:30</fullName>
                </value>
                <value>
                    <fullName>04:40</fullName>
                </value>
                <value>
                    <fullName>04:50</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EnteringTime2__c</fullName>
        <description>２回休憩の入室</description>
        <label>入室２</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EnteringTime3Cal__c</fullName>
        <formula>IF (ISNULL(EnteringTime3__c), &quot;&quot;, LEFT(RIGHT(text(EnteringTime3__c + 3.375),9),5))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>$入室３</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EnteringTime3HM__c</fullName>
        <label>入室３時刻</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>00:00</fullName>
                </value>
                <value>
                    <fullName>00:10</fullName>
                </value>
                <value>
                    <fullName>00:20</fullName>
                </value>
                <value>
                    <fullName>00:30</fullName>
                </value>
                <value>
                    <fullName>00:40</fullName>
                </value>
                <value>
                    <fullName>00:50</fullName>
                </value>
                <value>
                    <fullName>01:00</fullName>
                </value>
                <value>
                    <fullName>01:10</fullName>
                </value>
                <value>
                    <fullName>01:20</fullName>
                </value>
                <value>
                    <fullName>01:30</fullName>
                </value>
                <value>
                    <fullName>01:40</fullName>
                </value>
                <value>
                    <fullName>01:50</fullName>
                </value>
                <value>
                    <fullName>02:00</fullName>
                </value>
                <value>
                    <fullName>02:10</fullName>
                </value>
                <value>
                    <fullName>02:20</fullName>
                </value>
                <value>
                    <fullName>02:30</fullName>
                </value>
                <value>
                    <fullName>02:40</fullName>
                </value>
                <value>
                    <fullName>02:50</fullName>
                </value>
                <value>
                    <fullName>03:00</fullName>
                </value>
                <value>
                    <fullName>03:10</fullName>
                </value>
                <value>
                    <fullName>03:20</fullName>
                </value>
                <value>
                    <fullName>03:30</fullName>
                </value>
                <value>
                    <fullName>03:40</fullName>
                </value>
                <value>
                    <fullName>03:50</fullName>
                </value>
                <value>
                    <fullName>04:00</fullName>
                </value>
                <value>
                    <fullName>04:10</fullName>
                </value>
                <value>
                    <fullName>04:20</fullName>
                </value>
                <value>
                    <fullName>04:30</fullName>
                </value>
                <value>
                    <fullName>04:40</fullName>
                </value>
                <value>
                    <fullName>04:50</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EnteringTime3__c</fullName>
        <label>入室３</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EnteringTimeCal__c</fullName>
        <formula>IF (ISNULL(EnteringTime__c), &quot;&quot;, LEFT(RIGHT(text(EnteringTime__c + 3.375),9),5))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>$入室１</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EnteringTimeHM__c</fullName>
        <label>入室時刻</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>00:00</fullName>
                </value>
                <value>
                    <fullName>00:10</fullName>
                </value>
                <value>
                    <fullName>00:20</fullName>
                </value>
                <value>
                    <fullName>00:30</fullName>
                </value>
                <value>
                    <fullName>00:40</fullName>
                </value>
                <value>
                    <fullName>00:50</fullName>
                </value>
                <value>
                    <fullName>01:00</fullName>
                </value>
                <value>
                    <fullName>01:10</fullName>
                </value>
                <value>
                    <fullName>01:20</fullName>
                </value>
                <value>
                    <fullName>01:30</fullName>
                </value>
                <value>
                    <fullName>01:40</fullName>
                </value>
                <value>
                    <fullName>01:50</fullName>
                </value>
                <value>
                    <fullName>02:00</fullName>
                </value>
                <value>
                    <fullName>02:10</fullName>
                </value>
                <value>
                    <fullName>02:20</fullName>
                </value>
                <value>
                    <fullName>02:30</fullName>
                </value>
                <value>
                    <fullName>02:40</fullName>
                </value>
                <value>
                    <fullName>02:50</fullName>
                </value>
                <value>
                    <fullName>03:00</fullName>
                </value>
                <value>
                    <fullName>03:10</fullName>
                </value>
                <value>
                    <fullName>03:20</fullName>
                </value>
                <value>
                    <fullName>03:30</fullName>
                </value>
                <value>
                    <fullName>03:40</fullName>
                </value>
                <value>
                    <fullName>03:50</fullName>
                </value>
                <value>
                    <fullName>04:00</fullName>
                </value>
                <value>
                    <fullName>04:10</fullName>
                </value>
                <value>
                    <fullName>04:20</fullName>
                </value>
                <value>
                    <fullName>04:30</fullName>
                </value>
                <value>
                    <fullName>04:40</fullName>
                </value>
                <value>
                    <fullName>04:50</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EnteringTime__c</fullName>
        <label>入室</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FromTMUpdatePage__c</fullName>
        <defaultValue>false</defaultValue>
        <label>From勤怠管理画面フラグー</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LateNightHourTime__c</fullName>
        <formula>(LateNightTime__c -  LateNightRestTime__c -  LateNightRestPlusTime__c )/ 60</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>深夜の労働時間数</inlineHelpText>
        <label>深夜時間(時)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LateNightRestPlusTime__c</fullName>
        <inlineHelpText>3回以上の深夜休憩時間の合計情報を格納する（時間単位）</inlineHelpText>
        <label>深夜休憩時間（分）(３回以上)</label>
        <summarizedField>RestTimeManagement__c.LateNightRestTime__c</summarizedField>
        <summaryForeignKey>RestTimeManagement__c.WorkTimeInfo__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>LateNightRestTime__c</fullName>
        <inlineHelpText>3回までの入出室の深夜休憩時間合計値を格納する</inlineHelpText>
        <label>深夜休憩時間(分)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LateNightTime__c</fullName>
        <description>深夜休憩時間も含め</description>
        <inlineHelpText>出勤時間の間に深夜の時間数（分）の情報を格納（深夜休憩時間も含め）</inlineHelpText>
        <label>深夜時間(分)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MinuteCalculate__c</fullName>
        <formula>CASE(WorkerRef__r.CalMethodType__c,
&apos;切り捨て&apos;,
IF(ISBLANK(Text(WorkerRef__r.TimeUnit__c)),
    Mod(MinuteSum__c,60),
    Mod(MinuteSum__c,60) - Mod(Mod(MinuteSum__c,60),VALUE( SUBSTITUTE(Text(WorkerRef__r.TimeUnit__c), &apos;分&apos;, &apos;&apos;)))
),
&apos;切り上げ&apos;,
IF(OR(ISBLANK(Text(WorkerRef__r.TimeUnit__c)),Text(WorkerRef__r.TimeUnit__c) = &apos;1分&apos;),
    Mod(MinuteSum__c,60),
    Mod(MinuteSum__c,60) - Mod(Mod(MinuteSum__c,60),VALUE( SUBSTITUTE(Text(WorkerRef__r.TimeUnit__c), &apos;分&apos;, &apos;&apos;))) + VALUE( SUBSTITUTE(Text(WorkerRef__r.TimeUnit__c), &apos;分&apos;, &apos;&apos;))
),
&apos;四捨五入&apos;,
IF(ISBLANK(Text(WorkerRef__r.TimeUnit__c)),
    Mod(MinuteSum__c,60),
    IF(Mod(Mod(MinuteSum__c,60),VALUE( SUBSTITUTE(Text(WorkerRef__r.TimeUnit__c), &apos;分&apos;, &apos;&apos;))) = 0,
                         Mod(MinuteSum__c,60),
                         IF(Mod(Mod(MinuteSum__c,60),VALUE( SUBSTITUTE(Text(WorkerRef__r.TimeUnit__c), &apos;分&apos;, &apos;&apos;))) &gt;= (VALUE( SUBSTITUTE(Text(WorkerRef__r.TimeUnit__c), &apos;分&apos;, &apos;&apos;))/2),
                            (Mod(MinuteSum__c,60) - Mod(Mod(MinuteSum__c,60),VALUE( SUBSTITUTE(Text(WorkerRef__r.TimeUnit__c), &apos;分&apos;, &apos;&apos;))) + VALUE( SUBSTITUTE(Text(WorkerRef__r.TimeUnit__c), &apos;分&apos;, &apos;&apos;))),
                            (Mod(MinuteSum__c,60) - Mod(Mod(MinuteSum__c,60),VALUE( SUBSTITUTE(Text(WorkerRef__r.TimeUnit__c), &apos;分&apos;, &apos;&apos;))))
                         )
                       )
),
Mod(MinuteSum__c,60))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>最終時間端数計算</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MinuteSum__c</fullName>
        <defaultValue>0</defaultValue>
        <label>時間総分数</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OutingTime2Cal__c</fullName>
        <formula>IF (ISNULL(OutingTime2__c), &quot;&quot;, LEFT(RIGHT(text(OutingTime2__c + 3.375),9),5))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>$外出２</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OutingTime2HM__c</fullName>
        <label>外出２時刻</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>00:00</fullName>
                </value>
                <value>
                    <fullName>00:10</fullName>
                </value>
                <value>
                    <fullName>00:20</fullName>
                </value>
                <value>
                    <fullName>00:30</fullName>
                </value>
                <value>
                    <fullName>00:40</fullName>
                </value>
                <value>
                    <fullName>00:50</fullName>
                </value>
                <value>
                    <fullName>01:00</fullName>
                </value>
                <value>
                    <fullName>01:10</fullName>
                </value>
                <value>
                    <fullName>01:20</fullName>
                </value>
                <value>
                    <fullName>01:30</fullName>
                </value>
                <value>
                    <fullName>01:40</fullName>
                </value>
                <value>
                    <fullName>01:50</fullName>
                </value>
                <value>
                    <fullName>02:00</fullName>
                </value>
                <value>
                    <fullName>02:10</fullName>
                </value>
                <value>
                    <fullName>02:20</fullName>
                </value>
                <value>
                    <fullName>02:30</fullName>
                </value>
                <value>
                    <fullName>02:40</fullName>
                </value>
                <value>
                    <fullName>02:50</fullName>
                </value>
                <value>
                    <fullName>03:00</fullName>
                </value>
                <value>
                    <fullName>03:10</fullName>
                </value>
                <value>
                    <fullName>03:20</fullName>
                </value>
                <value>
                    <fullName>03:30</fullName>
                </value>
                <value>
                    <fullName>03:40</fullName>
                </value>
                <value>
                    <fullName>03:50</fullName>
                </value>
                <value>
                    <fullName>04:00</fullName>
                </value>
                <value>
                    <fullName>04:10</fullName>
                </value>
                <value>
                    <fullName>04:20</fullName>
                </value>
                <value>
                    <fullName>04:30</fullName>
                </value>
                <value>
                    <fullName>04:40</fullName>
                </value>
                <value>
                    <fullName>04:50</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OutingTime2__c</fullName>
        <description>２回休憩の外出</description>
        <label>外出２</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>OutingTime3Cal__c</fullName>
        <formula>IF (ISNULL(OutingTime3__c), &quot;&quot;, LEFT(RIGHT(text(OutingTime3__c + 3.375),9),5))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>$外出３</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OutingTime3HM__c</fullName>
        <label>外出３時刻</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>00:00</fullName>
                </value>
                <value>
                    <fullName>00:10</fullName>
                </value>
                <value>
                    <fullName>00:20</fullName>
                </value>
                <value>
                    <fullName>00:30</fullName>
                </value>
                <value>
                    <fullName>00:40</fullName>
                </value>
                <value>
                    <fullName>00:50</fullName>
                </value>
                <value>
                    <fullName>01:00</fullName>
                </value>
                <value>
                    <fullName>01:10</fullName>
                </value>
                <value>
                    <fullName>01:20</fullName>
                </value>
                <value>
                    <fullName>01:30</fullName>
                </value>
                <value>
                    <fullName>01:40</fullName>
                </value>
                <value>
                    <fullName>01:50</fullName>
                </value>
                <value>
                    <fullName>02:00</fullName>
                </value>
                <value>
                    <fullName>02:10</fullName>
                </value>
                <value>
                    <fullName>02:20</fullName>
                </value>
                <value>
                    <fullName>02:30</fullName>
                </value>
                <value>
                    <fullName>02:40</fullName>
                </value>
                <value>
                    <fullName>02:50</fullName>
                </value>
                <value>
                    <fullName>03:00</fullName>
                </value>
                <value>
                    <fullName>03:10</fullName>
                </value>
                <value>
                    <fullName>03:20</fullName>
                </value>
                <value>
                    <fullName>03:30</fullName>
                </value>
                <value>
                    <fullName>03:40</fullName>
                </value>
                <value>
                    <fullName>03:50</fullName>
                </value>
                <value>
                    <fullName>04:00</fullName>
                </value>
                <value>
                    <fullName>04:10</fullName>
                </value>
                <value>
                    <fullName>04:20</fullName>
                </value>
                <value>
                    <fullName>04:30</fullName>
                </value>
                <value>
                    <fullName>04:40</fullName>
                </value>
                <value>
                    <fullName>04:50</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OutingTime3__c</fullName>
        <label>外出３</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>OutingTimeCal__c</fullName>
        <formula>IF (ISNULL(OutingTime__c), &quot;&quot;, LEFT(RIGHT(text(OutingTime__c + 3.375),9),5))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>$外出１</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OutingTimeHM__c</fullName>
        <label>外出時刻</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>00:00</fullName>
                </value>
                <value>
                    <fullName>00:10</fullName>
                </value>
                <value>
                    <fullName>00:20</fullName>
                </value>
                <value>
                    <fullName>00:30</fullName>
                </value>
                <value>
                    <fullName>00:40</fullName>
                </value>
                <value>
                    <fullName>00:50</fullName>
                </value>
                <value>
                    <fullName>01:00</fullName>
                </value>
                <value>
                    <fullName>01:10</fullName>
                </value>
                <value>
                    <fullName>01:20</fullName>
                </value>
                <value>
                    <fullName>01:30</fullName>
                </value>
                <value>
                    <fullName>01:40</fullName>
                </value>
                <value>
                    <fullName>01:50</fullName>
                </value>
                <value>
                    <fullName>02:00</fullName>
                </value>
                <value>
                    <fullName>02:10</fullName>
                </value>
                <value>
                    <fullName>02:20</fullName>
                </value>
                <value>
                    <fullName>02:30</fullName>
                </value>
                <value>
                    <fullName>02:40</fullName>
                </value>
                <value>
                    <fullName>02:50</fullName>
                </value>
                <value>
                    <fullName>03:00</fullName>
                </value>
                <value>
                    <fullName>03:10</fullName>
                </value>
                <value>
                    <fullName>03:20</fullName>
                </value>
                <value>
                    <fullName>03:30</fullName>
                </value>
                <value>
                    <fullName>03:40</fullName>
                </value>
                <value>
                    <fullName>03:50</fullName>
                </value>
                <value>
                    <fullName>04:00</fullName>
                </value>
                <value>
                    <fullName>04:10</fullName>
                </value>
                <value>
                    <fullName>04:20</fullName>
                </value>
                <value>
                    <fullName>04:30</fullName>
                </value>
                <value>
                    <fullName>04:40</fullName>
                </value>
                <value>
                    <fullName>04:50</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OutingTime__c</fullName>
        <label>外出</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>OverHourTime__c</fullName>
        <formula>OverTime__c / 60</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>残業時間(時）</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OverTime__c</fullName>
        <label>残業時間(分）</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PsComment__c</fullName>
        <label>コメント</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PsDepartmentCal__c</fullName>
        <formula>WorkerRef__r.Department</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>$部門</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PsEmploymentStatusCal__c</fullName>
        <formula>TEXT(WorkerRef__r.EmploymentStatus__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>$雇用形態</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PsEnteringTime2Cal__c</fullName>
        <formula>IF (ISNULL(EnteringTime2__c), &quot;&quot;, LEFT(RIGHT(text(EnteringTime2__c + 3.375),9),5))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>$入室２</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PsEnteringTime3Cal__c</fullName>
        <formula>IF (ISNULL(EnteringTime3__c), &quot;&quot;, LEFT(RIGHT(text(EnteringTime3__c + 3.375),9),5))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>$入室３</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PsEnteringTimeCal__c</fullName>
        <formula>IF (ISNULL(EnteringTime__c), &quot;&quot;, LEFT(RIGHT(text(EnteringTime__c + 3.375),9),5))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>$入室１</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PsOutingTime2Cal__c</fullName>
        <formula>IF (ISNULL(OutingTime2__c), &quot;&quot;, LEFT(RIGHT(text(OutingTime2__c + 3.375),9),5))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>$外出２</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PsOutingTime3Cal__c</fullName>
        <formula>IF (ISNULL(OutingTime3__c), &quot;&quot;, LEFT(RIGHT(text(OutingTime3__c + 3.375),9),5))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>$外出３</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PsOutingTimeCal__c</fullName>
        <formula>IF (ISNULL(OutingTime__c), &quot;&quot;, LEFT(RIGHT(text(OutingTime__c + 3.375),9),5))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>$外出１</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PsStrideFlgCal__c</fullName>
        <formula>IF ( OR(ISNULL(WorkBeginTime__c), ISNULL(WorkEndTime__c) ), FALSE, 
TEXT(YEAR(DATEVALUE(WorkBeginTime__c))) &amp; &quot;/&quot; &amp; TEXT(MONTH(DATEVALUE(WorkBeginTime__c))) &amp; &quot;/&quot; &amp; TEXT(DAY(DATEVALUE(WorkBeginTime__c))) &lt;&gt; 
TEXT(YEAR(DATEVALUE(WorkEndTime__c))) &amp; &quot;/&quot; &amp; TEXT(MONTH(DATEVALUE(WorkEndTime__c))) &amp; &quot;/&quot; &amp; TEXT(DAY(DATEVALUE(WorkEndTime__c))) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>日またがりフラグ</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PsWorkBeginDateCal__c</fullName>
        <formula>IF (ISNULL(WorkBeginTime__c), &quot;&quot;, 
IF(PsStrideFlgCal__c, 
TEXT(YEAR(DATEVALUE(WorkBeginTime__c))) &amp; &quot;/&quot; &amp; if (len(TEXT(MONTH(DATEVALUE(WorkBeginTime__c)))) = 1, &quot;0&quot;&amp;TEXT(MONTH(DATEVALUE(WorkBeginTime__c))), TEXT(MONTH(DATEVALUE(WorkBeginTime__c)))) &amp; &quot;/&quot; &amp; if ( len(TEXT(DAY(DATEVALUE(WorkBeginTime__c)))) = 1, &quot;0&quot;&amp;TEXT(DAY(DATEVALUE(WorkBeginTime__c))), TEXT(DAY(DATEVALUE(WorkBeginTime__c)))) 
,&quot;&quot; 
) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>$出勤日</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PsWorkBeginTimeCal__c</fullName>
        <formula>IF (ISNULL(WorkBeginTime__c), &quot;&quot;, LEFT(RIGHT(text(WorkBeginTime__c + 3.375),9),5))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>$出勤時間</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PsWorkDayCal__c</fullName>
        <formula>SUBSTITUTE(TEXT(WorkDay__c) ,&quot;-&quot;,&quot;/&quot;) &amp; 
CASE( MOD( WorkDay__c - DATE(1900, 1, 7), 7), 
0, &apos;(日)&apos;, 
1, &apos;(月)&apos;, 
2, &apos;(火)&apos;, 
3, &apos;(水)&apos;, 
4, &apos;(木)&apos;, 
5, &apos;(金) &apos;, 
&apos;(土)&apos; 
)</formula>
        <label>$営業日</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PsWorkEndDateCal__c</fullName>
        <formula>IF (ISNULL(WorkEndTime__c), &quot;&quot;, 
IF(PsStrideFlgCal__c, 
TEXT(YEAR(DATEVALUE(WorkEndTime__c))) &amp; &quot;/&quot; &amp; if (len(TEXT(MONTH(DATEVALUE(WorkEndTime__c)))) = 1, &quot;0&quot;&amp;TEXT(MONTH(DATEVALUE(WorkEndTime__c))), TEXT(MONTH(DATEVALUE(WorkEndTime__c)))) &amp; &quot;/&quot; &amp; if ( len(TEXT(DAY(DATEVALUE(WorkEndTime__c)))) = 1, &quot;0&quot;&amp;TEXT(DAY(DATEVALUE(WorkEndTime__c))), TEXT(DAY(DATEVALUE(WorkEndTime__c)))) 
, 
&quot;&quot; 
) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>$退勤日</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PsWorkEndTimeCal__c</fullName>
        <formula>IF (ISNULL(WorkEndTime__c), &quot;&quot;, LEFT(RIGHT(text(WorkEndTime__c + 3.375),9),5))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>$退勤時間</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PsWorkerNameCal__c</fullName>
        <formula>IF(ISBLANK(WorkerRef__r.EmployeeCode__c), &quot;   &quot;,WorkerRef__r.EmployeeCode__c)  &amp; &quot;_&quot; &amp; WorkerRef__r.Alias &amp; &quot; (&quot; &amp; WorkerRef__r.FirstName &amp; &quot; &quot; &amp; WorkerRef__r.LastName &amp;&quot;)&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>氏名</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RealWorkTime__c</fullName>
        <formula>VALUE(IF(OR(ISNULL(WorkBeginTime__c), ISNULL(WorkEndTime__c)), TEXT(0) , IF(ISNULL(OutingTime__c),(TEXT(ROUND((24*ABS(WorkEndTime__c - WorkBeginTime__c)),2))),(IF(ISNULL(EnteringTime__c),(TEXT(ROUND((24*(OutingTime__c - WorkBeginTime__c)),2))),(TEXT(ROUND((24*(ABS(WorkEndTime__c - WorkBeginTime__c) - (EnteringTime__c - OutingTime__c))),2))))))) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>勤務時間数</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RecordTime__c</fullName>
        <label>打刻日時</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>RelUser__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ユーザ</label>
        <referenceTo>User</referenceTo>
        <relationshipName>WorkMgrkQ8U</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RestMinuteSumAll2__c</fullName>
        <defaultValue>0</defaultValue>
        <label>休憩時間数(分)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RestMinuteSumAll__c</fullName>
        <label>休憩分数(３回以上)</label>
        <summarizedField>RestTimeManagement__c.RestMinuteSum__c</summarizedField>
        <summaryForeignKey>RestTimeManagement__c.WorkTimeInfo__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>勤怠ステータス</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>承認待ち</fullName>
                </value>
                <value>
                    <fullName>承認済み</fullName>
                </value>
                <value>
                    <fullName>却下</fullName>
                </value>
                <value>
                    <fullName>申請前</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>